// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent base styles 1`] = `
{
  "parsed": {
    "backgroundVariable": "color-secondary",
    "placeholderVariable": null,
    "ringVariable": "color-border",
    "textVariable": "text-color-surface",
  },
  "raw": [
    "bg-secondary",
    "text-surface",
    "text-muted",
    "ring-border",
  ],
  "styling": {
    "baseTokens": [
      "bg-secondary",
      "text-surface",
      "text-muted",
      "ring-border",
    ],
    "sizeVariants": {
      "base": {
        "classes": "h-9 gap-1.5 rounded-lg px-3 text-base",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 16,
          "paddingX": 12,
        },
        "height": 36,
      },
      "lg": {
        "classes": "h-10 gap-2 rounded-lg px-4 text-base",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 16,
          "paddingX": 16,
        },
        "height": 40,
      },
      "sm": {
        "classes": "h-6.5 gap-1 rounded-md px-2 text-xs",
        "dimensions": {
          "borderRadius": 6,
          "fontSize": 12,
          "paddingX": 8,
        },
        "height": 26,
      },
      "xs": {
        "classes": "h-5 gap-1 rounded-sm px-1.5 text-xs",
        "dimensions": {
          "borderRadius": 2,
          "fontSize": 12,
          "paddingX": 6,
        },
        "height": 20,
      },
    },
    "states": {
      "base": [
        "bg-secondary",
        "text-surface",
        "ring-border",
      ],
      "disabled": [
        "opacity-50",
        "text-muted",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
    },
  },
}
`;

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "baseStyles": {
    "parsed": {
      "backgroundVariable": "color-secondary",
      "placeholderVariable": null,
      "ringVariable": "color-border",
      "textVariable": "text-color-surface",
    },
    "raw": [
      "bg-secondary",
      "text-surface",
      "text-muted",
      "ring-border",
    ],
    "styling": {
      "baseTokens": [
        "bg-secondary",
        "text-surface",
        "text-muted",
        "ring-border",
      ],
      "sizeVariants": {
        "base": {
          "classes": "h-9 gap-1.5 rounded-lg px-3 text-base",
          "dimensions": {
            "borderRadius": 8,
            "fontSize": 16,
            "paddingX": 12,
          },
          "height": 36,
        },
        "lg": {
          "classes": "h-10 gap-2 rounded-lg px-4 text-base",
          "dimensions": {
            "borderRadius": 8,
            "fontSize": 16,
            "paddingX": 16,
          },
          "height": 40,
        },
        "sm": {
          "classes": "h-6.5 gap-1 rounded-md px-2 text-xs",
          "dimensions": {
            "borderRadius": 6,
            "fontSize": 12,
            "paddingX": 8,
          },
          "height": 26,
        },
        "xs": {
          "classes": "h-5 gap-1 rounded-sm px-1.5 text-xs",
          "dimensions": {
            "borderRadius": 2,
            "fontSize": 12,
            "paddingX": 6,
          },
          "height": 20,
        },
      },
      "states": {
        "base": [
          "bg-secondary",
          "text-surface",
          "ring-border",
        ],
        "disabled": [
          "opacity-50",
          "text-muted",
        ],
        "error": [
          "ring-error",
        ],
        "focus": [
          "ring-active",
        ],
      },
    },
  },
  "sizes": [
    {
      "classes": "h-5 gap-1 rounded-sm px-1.5 text-xs",
      "description": "Extra small input for compact UIs",
      "dimensions": {
        "classes": "h-5 gap-1 rounded-sm px-1.5 text-xs",
        "dimensions": {
          "borderRadius": 2,
          "fontSize": 12,
          "paddingX": 6,
        },
        "height": 20,
        "size": "xs",
      },
      "parsed": {
        "borderRadius": 2,
        "fontSize": 12,
        "gap": 4,
        "height": 20,
        "paddingX": 6,
      },
      "size": "xs",
    },
    {
      "classes": "h-6.5 gap-1 rounded-md px-2 text-xs",
      "description": "Small input for secondary fields",
      "dimensions": {
        "classes": "h-6.5 gap-1 rounded-md px-2 text-xs",
        "dimensions": {
          "borderRadius": 6,
          "fontSize": 12,
          "paddingX": 8,
        },
        "height": 26,
        "size": "sm",
      },
      "parsed": {
        "borderRadius": 6,
        "fontSize": 12,
        "gap": 4,
        "height": 26,
        "paddingX": 8,
      },
      "size": "sm",
    },
    {
      "classes": "h-9 gap-1.5 rounded-lg px-3 text-base",
      "description": "Default input size",
      "dimensions": {
        "classes": "h-9 gap-1.5 rounded-lg px-3 text-base",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 16,
          "paddingX": 12,
        },
        "height": 36,
        "size": "base",
      },
      "parsed": {
        "borderRadius": 8,
        "fontSize": 16,
        "gap": 6,
        "height": 36,
        "paddingX": 12,
      },
      "size": "base",
    },
    {
      "classes": "h-10 gap-2 rounded-lg px-4 text-base",
      "description": "Large input for prominent fields",
      "dimensions": {
        "classes": "h-10 gap-2 rounded-lg px-4 text-base",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 16,
          "paddingX": 16,
        },
        "height": 40,
        "size": "lg",
      },
      "parsed": {
        "borderRadius": 8,
        "fontSize": 16,
        "gap": 8,
        "height": 40,
        "paddingX": 16,
      },
      "size": "lg",
    },
  ],
  "stateTokens": {
    "base": [
      "bg-secondary",
      "text-surface",
      "ring-border",
    ],
    "disabled": [
      "opacity-50",
      "text-muted",
    ],
    "error": [
      "ring-error",
    ],
    "focus": [
      "ring-active",
    ],
  },
  "variants": [
    {
      "classes": "focus:ring-active",
      "description": "Default input appearance",
      "parsed": {},
      "variant": "default",
    },
    {
      "classes": "!ring-error focus:ring-error",
      "description": "Error state for validation failures",
      "parsed": {},
      "variant": "error",
    },
  ],
}
`;

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for base 1`] = `
{
  "classes": "h-9 gap-1.5 rounded-lg px-3 text-base",
  "dimensions": {
    "borderRadius": 8,
    "fontSize": 16,
    "paddingX": 12,
  },
  "height": 36,
  "size": "base",
}
`;

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for lg 1`] = `
{
  "classes": "h-10 gap-2 rounded-lg px-4 text-base",
  "dimensions": {
    "borderRadius": 8,
    "fontSize": 16,
    "paddingX": 16,
  },
  "height": 40,
  "size": "lg",
}
`;

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for sm 1`] = `
{
  "classes": "h-6.5 gap-1 rounded-md px-2 text-xs",
  "dimensions": {
    "borderRadius": 6,
    "fontSize": 12,
    "paddingX": 8,
  },
  "height": 26,
  "size": "sm",
}
`;

exports[`Input Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for xs 1`] = `
{
  "classes": "h-5 gap-1 rounded-sm px-1.5 text-xs",
  "dimensions": {
    "borderRadius": 2,
    "fontSize": 12,
    "paddingX": 6,
  },
  "height": 20,
  "size": "xs",
}
`;
